<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AdicionarUsuarioActivity">

    <TextView
        android:id="@+id/txtCadastrarUsuario"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_cadastrar_usuario" />

    <EditText
        android:id="@+id/editNomeCompleto"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_nome_completo" />

    <EditText
        android:id="@+id/editRegistro"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_cpf_rg"
        android:inputType="number" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/hint_senha"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ckMostrarSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/text_mostrar_senha" />

        <Button
            android:id="@+id/ckLimparCampos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/text_limpar_campo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cadastrar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancelar" />
    </LinearLayout>


</LinearLayout>